# website-builder-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
.github/workflows/: docker-build.yml
showcase/website_project_complex_multi_page/: about.html  careers.html  case-studies.html  contact.html  index.html  resources.html  services.html
showcase/website_project_complex_multi_page/css/: main.css
showcase/website_project_complex_multi_page/js/: main.js
showcase/website_project_simple_multi_page/: about.html  contact.html  index.html  menu.html
showcase/website_project_simple_multi_page/css/: styles.css
showcase/website_project_simple_multi_page/js/: main.js
showcase/website_project_simple_single_page/: index.html
showcase/website_project_simple_single_page/css/: style.css
showcase/website_project_simple_single_page/js/: main.js
src/website_builder/: config.py  main.py  main_json.py
src/website_builder/agents/: developer_agent.py  json_parser_agent.py  orchestrator_agent.py  requirements_agent.py  task_manager_agent.py
src/website_builder/api/: api.py  cli.py  json_api.py
src/website_builder/api/controller/: api.py
src/website_builder/api/service/: json_service.py  message_service.py  status_service.py  zip_service.py
src/website_builder/db/: crud.py  database.py  database_models.py
src/website_builder/graphs/: developer_graph.py  json_parser_graph.py  orchestrator_graph.py  requirements_graph.py  task_manager_graph.py
src/website_builder/mcp/: file_system.py
src/website_builder/models/: state_models.py
src/website_builder/prompts/: developer_prompts.py  json_parser_prompt.py  requirements_prompts.py  task_manager_prompts.py
src/website_builder/scripts/: test_graphs.py  utilities.py
src/website_builder/tools/: validation_tools.py
website_project/: FINAL_VALIDATION_SUMMARY.md  RESPONSIVE_DESIGN_README.md  VALIDATION.md  browser-test.html  index.html  responsive-test.html  test-interactivity.html
website_project/css/: styles.css
website_project/js/: mobile-optimization.js  script.js
