[project]
name = "website-builder-poc"
version = "0.1.0"
description = "Multi agent website builder"
requires-python = ">=3.11"
dependencies = [
    "langchain-google-genai>=2.1.12",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.6",
    "nest-asyncio>=1.6.0",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.1.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.43",
]

[tool.uv]
package = true

[project.scripts]
api = "website_builder.api.controller.api:main"

test-requirements = "website_builder.scripts.test_graphs:test_requirements"
test-tasks = "website_builder.scripts.test_graphs:test_task_manager"
test-developer = "website_builder.scripts.test_graphs:test_developer"
test-orchestrator = "website_builder.scripts.test_graphs:test_orchestrator"

visualize-graphs = "website_builder.scripts.utilities:visualize_all_graphs"
setup-project = "website_builder.scripts.utilities:setup_project_workspace"
clean-project = "website_builder.scripts.utilities:clean_project_workspace"

